--- a/CSS/style.css
+++ b/CSS/style.css
@@ -355,7 +355,8 @@ a {
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    width: 90vw;
+    /* width: 90vw; */
+    width: 50%;
 }
 
 .modal-bottom {
@@ -366,6 +367,7 @@ a {
     align-items: center;
     min-width: 150px;
     max-width: 90vw;
+
 }
 
 
