--- a/CSS/style.css
+++ b/CSS/style.css
@@ -333,14 +333,14 @@ a {
 
 .open {
     position: fixed;
-    height: 100%;
+    /* height: 100%; */
     width: 100%;
     top: 0px;
     left: 0;
     bottom: 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     row-gap: 30px;
     padding-top: 50px;
