--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,6 +19,11 @@ html {
     scroll-behavior: smooth;
 }
 
+img {
+    max-width: 100%;
+    object-fit: contain;
+}
+
 .scroll {
     position: fixed;
     top: 0;
