--- a/CSS/style.css
+++ b/CSS/style.css
@@ -447,7 +447,7 @@ footer {
     align-items: center;
     color: var(--primary);
     opacity: .8;
-    position: fixed;
+    position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
