--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,6 +10,69 @@ body {
 
 }
 
+input,
+label {
+    display: inline-block;
+    margin: auto;
+
+
+}
+
+input {
+    height: 30px;
+    border-radius: 5px;
+    padding-left: 5px;
+}
+
+input:focus {
+    border: none;
+}
+
+label {
+    width: 120px;
+    color: white;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 500px;
+    margin: auto;
+    width: 90%;
+    border-radius: 5px;
+    background: rgb(82 164 227);
+    box-shadow: 3px 3px 6px grey;
+}
+
+#contact {
+    margin-bottom: 50px;
+}
+
+#contact h3 {
+    margin-top: 20px;
+    margin-bottom: 50px;
+}
+
+.contact-btn {
+    width: 150px;
+    height: 50px;
+    background: rgb(155, 200, 107);
+    color: white;
+    border-radius: 8px;
+}
+
+
+.field {
+    width: 200px;
+}
+
+form:last-child {
+    text-align: center;
+    /* max-width: 600px; */
+}
+
 :root {
     --primary: rgb(41, 121, 181);
     --secondary: rgb(125, 178, 69);
@@ -200,14 +263,17 @@ a {
     height: initial;
 }
 
-.scroll-section h3 {
+
+.scroll-section h3,
+.contact-section h3 {
     text-align: center;
     padding-top: 5px;
     font-size: 2rem;
     color: var(--primary);
 }
 
-.scroll-section span {
+.scroll-section span,
+.contact-section span {
     color: var(--secondary);
 }
 
